--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Logger</string>
+    <string name="no_network">No network</string>
+    <string name="start_service">Start Service</string>
 </resources>
